<?xml version="1.0"?>
<package format="2">
  <name>atemr_dbus</name>
  <version>0.0.0</version>
  <description>The atemr_dbus package</description>
  <maintainer email="leocorp96@gmail.com">ephson</maintainer>
  <license>MIT</license>
  <url type="repository">git@github.com:LCP-WORKS/atemr_dbus.git</url>
  <author email="leocorp96@gmail.com">ephson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sdbus-c++</build_depend>
  <build_depend>sdbus-c++-tools</build_depend>
  <build_depend>atemr_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sdbus-c++</build_export_depend>
  <build_export_depend>sdbus-c++-tools</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sdbus-c++</exec_depend>
  <exec_depend>sdbus-c++-tools</exec_depend>
  <exec_depend>atemr_msgs</exec_depend>

  <export>
  </export>
</package>
